--- a/module1/10.GiaiQuyetVanDeThuatToan/ThucHanh/TimGiaTriNhoNhat.html
+++ b/module1/10.GiaiQuyetVanDeThuatToan/ThucHanh/TimGiaTriNhoNhat.html
@@ -17,7 +17,7 @@
     }
     function timMax2(arr) {
         let max=arr[0];
-        let max2=arr[0];
+        let max2=0;
         for(let i=0;i<arr.length;i++) {
             if(max<arr[i]) {
                 max2=max;
