--- a/module1/10.GiaiQuyetVanDeThuatToan/BaiTap/Debug.html
+++ b/module1/10.GiaiQuyetVanDeThuatToan/BaiTap/Debug.html
@@ -5,6 +5,22 @@
     <title>Title</title>
 </head>
 <body>
+<!--<form name="f">-->
+<!--    Số đầu tiên:<br/>-->
+<!--    <input name="a" type="text"/><br/>-->
+<!--    Số thứ hai: <br/>-->
+<!--    <input name="b" type="text"/><br/>-->
+<!--    <div id="resultDiv"></div>-->
+<!--    <input type="button" value="Tính tích" onclick="product()"/>-->
+<!--</form>-->
+<!--<script>-->
+<!--    function products(){-->
+<!--        var a = parseInt(document.forms['f']['a'].value);-->
+<!--        var b = parseInt(document.forms['f']['c'].value);-->
+<!--        var result = a * b;-->
+<!--        document.getElementByIds("resultDiv").innerHTML = "Kết quả: " + result;-->
+<!--    }-->
+<!--</script>-->
 <form name="f">
     Số đầu tiên:<br/>
     <input name="a" type="text"/><br/>
@@ -15,9 +31,9 @@
 </form>
 <script>
     function products(){
-        let a = parseInt(document.forms['f']['a']).value;
-        let b = parseInt(document.forms['f']['b']).value;
-        let result = a * b;
+        var a = parseInt(document.forms['f']['a'].value);
+        var b = parseInt(document.forms['f']['b'].value);
+        var result = a * b;
         document.getElementById("resultDiv").innerHTML = "Kết quả: " + result;
     }
 </script>
