--- a/module1/10.GiaiQuyetVanDeThuatToan/ThucHanh/DemSoLanXuatHien.html
+++ b/module1/10.GiaiQuyetVanDeThuatToan/ThucHanh/DemSoLanXuatHien.html
@@ -6,8 +6,31 @@
 </head>
 <body>
 <script>
-    function count(arr,data) {
-        let count=0;
+    let nums = new Array(100);
+    for (let i = 0; i < 100; i++) {
+        nums[i] = Math.floor(Math.random() * 100);
+    }
+    for (let i = 0; i < 100; i++) {
+        document.write(" _ " + nums[i] + " _ ");
+        if (i % 10 === 0 && i !== 0) {
+            document.write("<br><br>");
+        }
+    }
+
+    let n = parseInt(prompt("Enter a value to count: "));
+    let foundn = count(nums, n);
+
+    document.write("<br><br>");
+    document.write("found : " + foundn);
+
+    function count(arr, n) {
+        let dem = 0;
+        for (let j = 0; j < arr.length; j++) {
+            if (arr[j] === n) {
+                dem++;
+            }
+        }
+        return dem;
     }
 </script>
 </body>
