--- a/module1/CaseStudy Module1/YeuCau6.html
+++ b/module1/CaseStudy Module1/YeuCau6.html
@@ -181,8 +181,15 @@
                 alert("Đã thêm thành công.");
         };
         displayMainMenu=function () {
-            let choose=parseInt(prompt("1.Add new customer."+"\n2.Display information of customer."+"\n3.Display total pay of customer."
-            +"\n4.Edit information of customer."+"\n5.Delete customer."+"\n6.Exit."));
+            let choose=parseInt(prompt("1.Add new Customer \n" +
+                "2.Display Information Customer \n" +
+                "3.Display Total Pay of Customer \n" +
+                "4.Edit Information Customer \n" +
+                "5.Delete Customer \n" +
+                "6.Add new Employee \n" +
+                "7.Display information Employee \n" +
+                "8.Salary of Employee \n" +
+                "9.Exit"));
             let pick=this;
             switch (choose) {
                 case 1: {
