--- a/module1/CaseStudy Module1/YeuCau6.html
+++ b/module1/CaseStudy Module1/YeuCau6.html
@@ -214,6 +214,17 @@
                     break;
                 }
                 case 6: {
+                    addNewEmployee();
+                }
+                case 7: {
+                    displayEmployee();
+
+                }
+                case 8: {
+                    displaySalary();
+                    break;
+                }
+                case 9: {
                     break;
                 }
                 default: {
