--- a/module1/6.Mảng/ThucHanh/TaoBanCoCaro.html
+++ b/module1/6.Mảng/ThucHanh/TaoBanCoCaro.html
@@ -9,21 +9,37 @@
     <p id="carogame" />
     <button type="button" id="changeValue" onclick="changeValue()">Change Value</button>
     <script>
-        let b = document.getElementById("carogame ");
-
-        let board = [];
-        let data = "";
-        for (let i = 0; i < 5; i++) {
-            board[i] = new Array(0, 0, 0, 0, 0);
+        let b=document.getElementById('carogame');
+        let board= [];
+        let data='';
+        for (let i=0;i<5;i++){
+            board[i]= new Array(0,0,0,0,0);
         }
-
-        for (let i = 0; i < 5; i++) {
-            data += "<br/>";
-            for (let j = 0; j < 5; j++) {
-                data += board[i][j] + "&nbsp;&nbsp;";
+        for (let i=0;i<5;i++){
+            data+='<br>';
+            for (let j=0;j<5;j++){
+                data += board[i][j] + '&nbsp;&nbsp';
             }
+
         }
-        b.innerHTML = data;
+        data+= '<br><br> <input type="button" value="Change value" onclick="changeValue()">'
+        b.innerHTML=data;
+
+        function changeValue() {
+            let positionX= prompt('Nhập x:')
+            let positionY=prompt('Nhập y:')
+            data='';
+            board[positionX][positionY]='x';
+            for (let i=0;i<5;i++){
+                data+='<br>';
+                for (let j=0;j<5;j++){
+                    data+= board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
+                }
+            }
+            data+= '<br><br> <input type="button" value="Change value" onclick="changeValue()">'
+            b.innerHTML=data;
+
+        }
     </script>
 
 
