--- a/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai5.html
+++ b/module1/7.Hàm/BaiTap/LuyenTapSuDungHam2/Bai5.html
@@ -6,19 +6,16 @@
 </head>
 <body>
     <script>
-        let mangso=[1,2,7,-3];
-        timMin();
-        function timMin(mangso) {
-            let m;
-            for(let i=0;i<mangso.length;i++) {
-                m=mangso[0];
-                if (mangso[i]<m) {
-                    m=mangso[i]
-                }
-            }
-            return m
+        function receiveAndFindMin() {
+            let num1 =parseInt(prompt("Nhap vao 1 so nguyen"));
+            let num2 =parseInt(prompt("Nhap vao 1 so nguyen"));
+            let num3 =parseInt(prompt("Nhap vao 1 so nguyen"));
+            let Min=num1;
+            Min = Min<num2?Min:num2;
+            Min = Min<num3?Min:num3;
+            alert(Min);
         }
-
+    receiveAndFindMin();
 
     </script>
 
