--- a/module1/6.Mảng/BaiTap/LuyenTapMang02.html
+++ b/module1/6.Mảng/BaiTap/LuyenTapMang02.html
@@ -77,15 +77,49 @@
     // }
     // document.write(mang.join(""));
 
-    //Bài thêm: chữ đầu tiên của từng vị trí thành in hoa
-    let arr=["hải","lộc","An","gia","sơn"];
-    function check(arr) {
-        for(let i=0;i<arr.length;i++) {
-            return arr[i].charAt(0).toUpperCase()+arr.slice(1);
+    // Bài thêm: chữ đầu tiên của từng vị trí thành in hoa
+    // let arr=["hải","lộc","An","gia","sơn"];
+    // function check(arr) {
+    //     for(let i=0;i<arr.length;i++) {
+    //          arr[i]=arr[i].charAt(0).toUpperCase()+arr[i].slice(1);
+    //     }
+    //     return  arr
+    // }
+    //
+    // document.write(check(arr));
+
+    //tìm max
+    // let arr = [1, 2, 3, 6, 9, 10];
+    //
+    // function findMax(array) {
+    //     let max = array[0];
+    //     for (let i = 1; i < array.length; i++) {
+    //         if (max < array[i]) {
+    //             max = array[i]
+    //         }
+    //     }
+    //     console.log(max);
+    // }
+    // findMax(arr);
+
+    //xóa phần tử
+
+    let intArr = [7, 3, 6, 7, 8, 7, 7, 34, 44];
+
+    function tryRemoveFromArray(array, number) {
+        let i = 0;
+        while (i < array.length) {
+            if (array[i] === number) {
+                array.splice(i, 1);
+            } else {
+                i++;
+            }
         }
-        return  arr.join(" ");
+        console.log(array);
     }
-    document.write(check(arr));
+
+    tryRemoveFromArray(intArr, 7);
+
 </script>
 </body>
 </html>
