--- a/module1/exam/Bai1.html
+++ b/module1/exam/Bai1.html
@@ -12,6 +12,7 @@
     }
     document.write("Mảng nhập vào: "+arr.join(" ")+"<br/>");
     document.write("Mảng đã sắp xếp "+arr.sort(function (a, b) {return a - b}));
+    console.log( typeof arr);
 </script>
 </body>
 </html>
